# StockSurfer

./: .gitignore  DailyAnalysis.ipynb  README.md  index.html  pyproject.toml  requirements.txt  scrapers.html  search.json  settings.ini  sitemap.xml  strategies.html  technicals.html
Data/Bhavcopy/Processed/: 20MICRONS.parquet  21STCENMGM.parquet  360ONE.parquet  3IINFOLTD.parquet  3IINFOTECH.parquet  3MINDIA.parquet  3PLAND.parquet  4THDIM.parquet  5PAISA.parquet  63MOONS.parquet  8KMILES.parquet  A2ZINFRA.parquet  AAATECH.parquet  AAKASH.parquet  AAREYDRUGS.parquet  AARON.parquet  AARTECH.parquet  AARTIDRUGS.parquet  AARTIIND.parquet  AARTIPHARM.parquet  AARTISURF.parquet  AARVEEDEN.parquet  AARVI.parquet  AAVAS.parquet  ABAN.parquet  ABB.parquet  ABBOTINDIA.parquet  ABCAPITAL.parquet  ABCIL.parquet  ABFRL.parquet  ABGSHIP.parquet  ABIRLANUVO.parquet  ABMINTLLTD.parquet  ABMINTLTD.parquet  ABSLAMC.parquet  ABSLBANETF.parquet  ABSLLIQUID.parquet  ABSLNN50ET.parquet  ACC.parquet  ACCELYA.parquet  (+2619 more)
Data/Misc/: ASM_List.csv  FnO_List.csv  GSM_List.csv  Insider_List.csv  Symbol_Changes.csv  Tradingview_Nifty500.txt  ind_nifty100list.csv  ind_nifty500list.csv
nbs/: 00_scrapers.ipynb  00_stockdata.ipynb  01_strategies.ipynb  01_technicals.ipynb  02_strategies.ipynb  02_technicals.ipynb  03_databases.ipynb  03_strategies.ipynb  04_filters.ipynb  05_strategies.ipynb  99_experiments.ipynb  index.ipynb  nbdev.yml  sidebar.yml
stocksurfer/: _modidx.py  databases.py  experiments.py  filters.py  scrapers.py  stockdata.py  strategies.py  technicals.py
