[tool.poetry]
name = "stocksurfer"
version = "0.1.0"
description = ""
authors = ["Ankur Divekar <ankur.divekar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
pandas = "^2.1.3"
nbdev = "^2.3.13"
quarto = "^0.1.0"
tqdm = "^4.66.1"
requests = "^2.31.0"
pandas-ta = "^0.3.14b0"
ipykernel = "^6.27.1"
setuptools = "^69.0.2"
pyarrow = "^14.0.1"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
